Fixed overflow of model property descriptions bunq/doc#62

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -67,6 +67,12 @@ body {
         }
     }
 
+    .model {
+        .renderedMarkdown {
+            word-break: break-word;
+        }
+    }
+
     .opblock-tag {
         border-bottom: none;
     }
